# Neural-Net-Thesis-

./: .gitignore
files/: Breakpoints.py  pyproject.toml  run2DApprox.batch  run2DApproxPOL.batch  runFirstTarget.batch  runMinLoss.batch  runSecondTarget.batch  runToughApprox.batch
files/Example Codes/: 2DApprox.py  2DApproxPOL.py  ApproxPWwith2SNN.py  FirstSNN.py  FirstTarget.py  MinLoss.py  NN2HiddenLayers.py  PiecewiseApprox.py  RandomFields.ipynb  RandomFields.py  SNN4cos.py  SecondTarget.py  ToughApprox.ipynb  ToughApprox.py  functions.py  functionsPOL.py  nn_approx.py  plot_comparisonPW.py  pyproject.toml  run.batch  runMinLoss_NNapprox
files/Paper Codes/: LICENSE  README.md  combine_loss_and_save_dataframe.py  deep_run.batch  deep_simulations.py  expressivity_plot.py  main.py  modulation_network.py  modulation_vs_plain_median_loss.py  plain_shallow.py  pyproject.toml  run.batch  simulations.py
